# vimproved

./: README.md  README.org  sets.conf
.woodpecker/: pkgcheck.yml
acct-group/shoko/: shoko-0.ebuild
acct-group/traefik/: traefik-0.ebuild
acct-user/kavita/: kavita-0.ebuild
acct-user/s6log/: s6log-0.ebuild
acct-user/shoko/: shoko-0.ebuild
acct-user/slskd/: slskd-0.ebuild
acct-user/traefik/: traefik-0.ebuild
app-admin/blahajdots/: Manifest  blahajdots-0.1.0.ebuild  blahajdots-0.1.1.ebuild  blahajdots-0.2.0.ebuild  blahajdots-0.2.2.ebuild  blahajdots-9999.ebuild
app-alternatives/coreutils/: coreutils-0-r1.ebuild  coreutils-0.ebuild  metadata.xml
app-alternatives/patch/: metadata.xml  patch-0-r1.ebuild  patch-0.ebuild
app-alternatives/pinentry/: metadata.xml  pinentry-0.ebuild  pinentry-1.ebuild
app-arch/msitools/: Manifest  msitools-0.102.ebuild
app-arch/p7zip/: p7zip-17.05-r2.ebuild
app-crypt/certbot-dns-porkbun/: Manifest  certbot-dns-porkbun-0.8.ebuild
app-editors/kak-lsp/: Manifest  kak-lsp-14.2.0.ebuild
app-emulation/wine-tkg/: Manifest  wine-tkg-9.14.ebuild
app-misc/flavours/: Manifest  flavours-0.7.1.ebuild  metadata.xml
app-misc/pomodoro/: Manifest  pomodoro-0.1.0.ebuild
config/: repos.conf
dev-libs/libtermkey/files/: meson.build
dev-libs/libvterm/files/: meson.build
eclass/: dub.eclass  kernel-build.eclass  renpy.eclass  zig-build.eclass  zig-package.eclass  zig.eclass
metadata/: layout.conf  pkg_desc_index  timestamp.chk
profiles/: categories  package.mask  package.unmask  package.use.mask  profiles.desc  use.local.desc
sets/: audio-plugins  lv2-plugins  vimproved-composition  vimproved-emacs  vimproved-fonts  vimproved-music  vimproved-utils  vimproved-vim  vimproved-wayland  visual-novels
(+1538 files in other folders)
